@startuml

title __MATERIALS's Class Diagram__\n

  namespace  {
    namespace omain.materials {
      abstract class domain.materials.Material {
          ~ details : String
          ~ id : int
          ~ name : String
          ~ unitPrice : int
          + Material()
          + getDetails()
          + getId()
          + getName()
          + getUnitPrice()
          {abstract} + getprice()
          + setDetails()
          + setId()
          + setName()
          + setUnitPrice()
      }
    }
  }
  

  namespace  {
    namespace omain.materials {
      interface domain.materials.MaterialRepository {
      }
    }
  }
  

  namespace  {
    namespace omain.materials {
      class domain.materials.StykListeLinje {
          - description : String
          - quantity : int
          + StykListeLinje()
          + getDescription()
          + getMateriale()
          + getQuantity()
          + setDescription()
          + setMateriale()
          + setQuantity()
          + toString()
      }
    }
  }
  

  namespace  {
    namespace omain.materials {
      class domain.materials.Stykliste {
          + unitListe : List<StykListeLinje>
          + volumenListe : List<StykListeLinje>
          + Stykliste()
          + toString()
      }
    }
  }
  

  namespace  {
    namespace omain.materials {
      interface domain.materials.StyklisteLinjeRepository {
          {abstract} + commit()
          {abstract} + find()
      }
    }
  }
  

  namespace  {
    namespace omain.materials {
      interface domain.materials.StyklisteRepository {
          {abstract} + commitStykliste()
          {abstract} + findStykliste()
      }
    }
  }
  

  namespace  {
    namespace omain.materials {
      class domain.materials.UnitMaterial {
          ~ unitType : String
          + UnitMaterial()
          + getUnitType()
          + getprice()
          + setUnitType()
          + toString()
      }
    }
  }
  

  namespace  {
    namespace omain.materials {
      interface domain.materials.UnitMaterialRepository {
          {abstract} + commit()
          {abstract} + find()
          {abstract} + findAll()
          {abstract} + findName()
          {abstract} + updatePrice()
      }
    }
  }
  

  namespace  {
    namespace omain.materials {
      class domain.materials.VolumeMaterial {
          ~ length : int
          + VolumeMaterial()
          + getLength()
          + getprice()
          + setLength()
          + toString()
      }
    }
  }
  

  namespace  {
    namespace omain.materials {
      interface domain.materials.VolumeMaterialRepository {
          {abstract} + commit()
          {abstract} + find()
          {abstract} + find()
          {abstract} + findAll()
          {abstract} + findAllName()
          {abstract} + updateNameWithPrice()
      }
    }
  }
  

  domain.materials.StykListeLinje o-- domain.materials.Material : materiale
  domain.materials.UnitMaterial -up-|> domain.materials.Material
  domain.materials.VolumeMaterial -up-|> domain.materials.Material


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
